# abejas-tetris

./: AUTHORS  COPYING  Doxyfile  Makefile  Makefile.am  Makefile.in  README.md  autogen.sh  config.status  configure  configure.ac
autom4te.cache/: output.1  requests  traces.0  traces.1
doc/html/: abc_8c.html  abc_8h.html  abc_8h_source.html  abejas_8c.html  abejas_8h.html  abejas_8h_source.html  annotated.html  classes.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dump_8c.html  dump_8h.html  dump_8h_source.html  files.html  funcion_8c.html  funcion_8h.html  funcion_8h_source.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  index.html  interfaz-grafica_8c.html  interfaz-grafica_8h.html  interfaz-grafica_8h_source.html  lock_8h.html  lock_8h_source.html  main_8c.html  md__r_e_a_d_m_e.html  menudata.js  pages.html  pieza_8c.html  pieza_8h.html  pieza_8h_source.html  (+16 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_0.js  files_2.js  files_3.js  files_6.js  (+36 more)
doc/latex/: DocumentoProyectoFinal-ABC.tex  abc_8c.tex  abc_8h.tex  abejas_8c.tex  abejas_8h.tex  annotated.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_97aefd0d527b934f1d99a682da8fe6a9.tex  dump_8c.tex  dump_8h.tex  files.tex  funcion_8c.tex  funcion_8h.tex  interfaz-grafica_8c.tex  interfaz-grafica_8h.tex  lock_8h.tex  main_8c.tex  md__r_e_a_d_m_e.tex  pieza_8c.tex  pieza_8h.tex  refman.aux  refman.idx  refman.out  refman.tex  refman.toc  structabeja.tex  structparam.tex  structpieza.tex  structpunto.tex  structtablero.tex  tablero_8c.tex  tablero_8h.tex  tetromino_8c.tex  tetromino_8h.tex
etc/: config.cfg  config.cfg~  muestra.cfg  semillas.cfg
lib/: abc.c  abc.h  abejas.c  abejas.c~  abejas.h  abejas.h~  dump.c  dump.h  funcion.c  funcion.c~  funcion.h  funcion.h~  lock.h  pieza.c  pieza.c~  pieza.h  tablero.c  tablero.h
lib/.deps/: lib_libutils_a-abc.Po  lib_libutils_a-abejas.Po  lib_libutils_a-funcion.Po  lib_libutils_a-pieza.Po  lib_libutils_a-tablero.Po
scripts/: autotools.sh  delete-and-compile.sh  fuerza-bruta.sh  llena-semillero.sh  remove-autofiles.sh
src/: abc.c  abc.h  interfaz-grafica.c  interfaz-grafica.h  main  main.c  main.c~  tetromino.c  tetromino.h
src/.deps/: src_main-interfaz-grafica.Po  src_main-main.Po  src_main-tetromino.Po
test/: test-ciudad.c  test-ruta.c
